--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "express": "^4.18.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.5.0",
+    "graphql": "^15.8.0",
     "mongoose": "^6.4.4"
   },
   "devDependencies": {
